jwt register and login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialet= org.hibernate.dialect.MySQL5Dialect
-jwt.secret=${JWT_SECRET:}
+jwt.secret=JWT_SECRET
+jwt.exp=86400
