--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/my_project?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/my_project?useSSL=false&useUnicode=yes&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=Dienko02.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,3 +12,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialet= org.hibernate.dialect.MySQL5Dialect
 jwt.secret=JWT_SECRET
 jwt.exp=86400
+
+uploadPath = /home/minhdien/upload/
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
